<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/contact_title"

        android:background="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/ctitle"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/contact_message"

        android:background="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:text="@string/cmessage"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contact_name"

        android:inputType="textPersonName"
        android:hint="@string/cname"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingLeft="8dp"
        android:scrollbars="horizontal" />

    <EditText
        android:id="@+id/contact_phone"

        android:hint="@string/cphone"
        android:inputType="phone"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingLeft="8dp"
        android:scrollbars="horizontal" />

    <EditText
        android:id="@+id/contact_email"

        android:hint="@string/cemail"
        android:inputType="textEmailAddress"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingLeft="8dp"
        android:scrollbars="horizontal" />

    <EditText
        android:id="@+id/contact_notes"

        android:hint="@string/cnotes"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:lines="2"
        android:paddingLeft="8dp"
        android:scrollbars="vertical" />

</LinearLayout>