...
    <string name="medication">Medication</string>
    <string name="calendar">Calendar</string>
    <string name="appointments">Appointments</string>
    <string name="measurements">Measurements</string>

    // Settings and Details strings
    <string name="edit_icon">Edit Icon</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>

    // Calendar strings
    <string name="last_date_arrow">Last Date Arrow</string>
    <string name="next_date_arrow">Next Date Arrow</string>
    <string name="next_appointment">Next Appointment</string>
    <string name="today_s_medicine">Today\'s Medication</string>

    // Contact strings
    <string name="ctitle">Add a Contact</string>
    <string name="cmessage">Enter the details for your new contact:</string>
    <string name="cname">Name</string>
    <string name="cnotes">Notes</string>
    <string name="cemail">Email</string>
    <string name="cphone">Phone</string>

...
    <string name="measmessage">Enter the details for your new measurement:</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="statisticslogo">statistics logo</string>

    // Investigation strings
    <string name="investigationtitle">Add an Investigation</string>
    <string name="investigationmessage">Enter the details of your recent investigation</string>
    <string name="invtitle">Title</string>
    <string name="DD">DD</string>
    <string name="MM">MM</string>
    <string name="YYYY">YYYY</string>
    <string name="invnotes">Notes</string>
...
