<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/investigation_title"

            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:text="@string/investigationtitle"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/investigation_message"

            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:text="@string/investigationmessage"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inv_title"

            android:hint="@string/invtitle"
            android:inputType="textCapWords"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="8dp"
            android:scrollbars="horizontal"
            android:nextFocusDown="@id/inv_DD"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/inv_DD"

            android:hint="@string/DD"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="90dp"
            android:paddingLeft="8dp"
            android:maxLength="2" />

        <EditText
            android:id="@+id/inv_MM"

            android:hint="@string/MM"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:paddingLeft="8dp"
            android:maxLength="2"
            />

        <EditText
            android:id="@+id/inv_YYYY"

            android:hint="@string/YYYY"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="130dp"
            android:paddingLeft="8dp"
            android:maxLength="4" />

        <!-- used for format error reporting across date fields -->
        <EditText
            android:id="@+id/date_error"
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/inv_notes"

            android:hint="@string/invnotes"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lines="2"
            android:paddingLeft="8dp"
            android:scrollbars="vertical" />

    </LinearLayout>

</LinearLayout>