<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_title"

            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_message"

            android:background="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:text="@string/measmessage"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/measurement"

            android:inputType="numberDecimal"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/meas_DD"

            android:hint="@string/DD"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="90dp"
            android:paddingLeft="8dp"
            android:maxLength="2"
            android:nextFocusDown="@id/meas_MM"/>

        <EditText
            android:id="@+id/meas_MM"

            android:hint="@string/MM"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="100dp"
            android:paddingLeft="8dp"
            android:maxLength="2"
            android:nextFocusDown="@id/meas_YYYY"/>

        <EditText
            android:id="@+id/meas_YYYY"

            android:hint="@string/YYYY"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="130dp"
            android:paddingLeft="8dp"
            android:maxLength="4"
            android:nextFocusDown="@string/centile"/>

        <!-- used for format error reporting across date fields -->
        <EditText
            android:id="@+id/date_error"
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/centile"

            android:hint="@string/centile"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="8dp" />

    </LinearLayout>

</LinearLayout>