...
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_weight="3"/>
        </LinearLayout>

        <ListView
            android:id="@+id/statistics_graph_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/s_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="25dp"
...
